@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.geowebcache</groupId>
   <artifactId>geowebcache</artifactId>
-  <version>1.20-SNAPSHOT</version>
+  <version>1.24-SNAPSHOT</version>
   <packaging>pom</packaging>
   <!-- GWC VERSION -->
   <name>geowebcache</name>
@@ -31,6 +31,12 @@
     <module>mbtiles</module>
   </modules>
 
+  <scm>
+    <connection>scm:git:git://github.com/geowebcache/geowebcache.git</connection>
+    <developerConnection>scm:git:[fetch=]git://github.com/geowebcache/geowebcache.git[push=]git@github.com:geowebcache/geowebcache.git</developerConnection>
+    <url>https://github.com/geowebcache/geowebcache</url>
+  </scm>
+
   <distributionManagement>
     <repository>
       <id>nexus</id>
@@ -45,49 +51,51 @@
   </distributionManagement>
 
   <properties>
-    <gt.version>26-SNAPSHOT</gt.version>
-    <jts.version>1.18.1</jts.version>
-    <jaiext.version>1.1.20</jaiext.version>
-    <spring.version>5.1.20.RELEASE</spring.version>
-    <spring.security.version>5.1.13.RELEASE</spring.security.version>
-    <xstream.version>1.4.11.1</xstream.version>
-    <commons-logging.version>1.1.1</commons-logging.version>
+    <gt.version>30-SNAPSHOT</gt.version>
+    <jts.version>1.19.0</jts.version>
+    <jaiext.version>1.1.24</jaiext.version>
+    <spring.version>5.3.25</spring.version>
+    <spring.security.version>5.7.6</spring.security.version>
+    <xstream.version>1.4.20</xstream.version>
     <commons-io.version>2.8.0</commons-io.version>
     <commons-dbcp.version>1.4</commons-dbcp.version>
     <commons-collections.version>4.2</commons-collections.version>
     <commons-codec.version>1.10</commons-codec.version>
     <commons-text.version>1.4</commons-text.version>
-    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-fileupload.version>1.5</commons-fileupload.version>
     <guava.version>27.0-jre</guava.version>
     <jsr305.version>3.0.1</jsr305.version>
-    <log4j.version>1.2.14</log4j.version>
+    <log4j.version>2.17.2</log4j.version>
     <h2.version>1.1.119</h2.version>
-    <postgresql.version>42.2.14</postgresql.version>
+    <hsql.version>2.7.1</hsql.version>
+    <postgresql.version>42.4.3</postgresql.version>
     <oracle.version></oracle.version>
     <java.awt.headless>true</java.awt.headless>
     <jalopy.phase>disabled</jalopy.phase>
     <jalopy.srcExcludesPattern>disabled</jalopy.srcExcludesPattern>
     <test.maxHeapSize>64M</test.maxHeapSize>
     <maven.test.jvmargs></maven.test.jvmargs>
-    <imageio-ext.version>1.3.6</imageio-ext.version>
+    <imageio-ext.version>1.4.7</imageio-ext.version>
     <hazelcast.version>3.11-BETA-1</hazelcast.version>
     <joda-time.version>2.8.1</joda-time.version>
-    <fmt.action>format</fmt.action>
-    <fmt.skip>false</fmt.skip>
+    <spotless.action>apply</spotless.action>
+    <spotless.apply.skip>false</spotless.apply.skip>
     <pom.fmt.action>sort</pom.fmt.action>
-    <pom.fmt.skip>${fmt.skip}</pom.fmt.skip>
-    <jackson.version>2.10.1</jackson.version>
+    <pom.fmt.skip>${spotless.apply.skip}</pom.fmt.skip>
+    <jackson.version>2.15.2</jackson.version>
+    <jackson.databind.version>2.15.2</jackson.databind.version>
     <jetty.version>9.4.18.v20190429</jetty.version>
     <errorProneFlags></errorProneFlags>
-    <errorProne.version>2.3.4</errorProne.version>
+    <errorProne.version>2.18.0</errorProne.version>
     <javac.version>9+181-r4173-1</javac.version>
-    <pmd.version>6.29.0</pmd.version>
+    <pmd.version>6.55.0</pmd.version>
     <checkstyle.skip>false</checkstyle.skip>
     <qa>false</qa>
     <lint>deprecation,unchecked</lint>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <jclouds.version>2.2.0</jclouds.version>
-    <mockito.version>3.8.0</mockito.version>
+    <jclouds.version>2.3.0</jclouds.version>
+    <mockito.version>3.12.4</mockito.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencyManagement>
@@ -130,17 +138,6 @@
         <version>${jsr305.version}</version>
       </dependency>
       <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>${commons-logging.version}</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>avalon-framework</artifactId>
-            <groupId>avalon-framework</groupId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
         <groupId>commons-dbcp</groupId>
         <artifactId>commons-dbcp</artifactId>
         <version>${commons-dbcp.version}</version>
@@ -170,11 +167,61 @@
         <artifactId>commons-fileupload</artifactId>
         <version>${commons-fileupload.version}</version>
       </dependency>
-
       <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpclient</artifactId>
+        <version>4.5.13</version>
+      </dependency>
+
+      <!-- configure geotools logging -->
+      <dependency>
+        <groupId>org.geotools</groupId>
+        <artifactId>gt-metadata</artifactId>
+        <version>${gt.version}</version>
+      </dependency>
+      <!-- logging dependencies -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
         <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-1.2-api</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-jul</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <!-- bridge slf4j to log4j -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-slf4j-impl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.25</version>
+      </dependency>
+
+      <!-- bridge commons-logging to log4j -->
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-jcl</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.2</version>
       </dependency>
 
       <dependency>
@@ -243,13 +290,7 @@
       <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
-        <version>3.2</version>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.easymock</groupId>
-        <artifactId>easymockclassextension</artifactId>
-        <version>3.2</version>
+        <version>5.0.1</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -287,9 +328,8 @@
         <version>${spring.version}</version>
         <exclusions>
           <exclusion>
-            <artifactId>spring-jcl</artifactId>
-            <!-- Use our own commons-logging  -->
-            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework</artifactId>
+            <groupId>spring-jcl</groupId>
           </exclusion>
         </exclusions>
       </dependency>
@@ -368,26 +408,19 @@
       <dependency>
         <groupId>org.codehaus.jettison</groupId>
         <artifactId>jettison</artifactId>
-        <version>1.0.1</version>
-      </dependency>
-
-      <dependency>
-        <groupId>stax</groupId>
-        <artifactId>stax-api</artifactId>
-        <version>1.0.1</version>
-      </dependency>
-
-      <dependency>
-        <!-- StAX is the reference implementation of the StAX API -->
-        <groupId>stax</groupId>
-        <artifactId>stax</artifactId>
-        <version>1.2.0</version>
+        <version>1.5.1</version>
       </dependency>
 
       <dependency>
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>${h2.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.hsqldb</groupId>
+        <artifactId>hsqldb</artifactId>
+        <version>${hsql.version}</version>
       </dependency>
 
       <dependency>
@@ -421,7 +454,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.version}</version>
+        <version>${jackson.databind.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
@@ -442,13 +475,13 @@
       <releases>
         <enabled>true</enabled>
       </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
       <!-- Contains releases for OSGeo projects: GeoTools, GeoWebCache, GeoServer, ...     -->
       <!-- Includs third-party-dependences, and caches of:                                 -->
       <!-- ucar (https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases) -->
       <!-- geosolutions (http://maven.geo-solutions.it/)                                   -->
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
       <id>osgeo-release</id>
       <name>OSGeo Repository</name>
       <url>https://repo.osgeo.org/repository/release/</url>
@@ -464,17 +497,22 @@
       <name>OSGeo Repository</name>
       <url>https://repo.osgeo.org/repository/snapshot/</url>
     </repository>
+    <repository>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <!-- required for use of imageio-ext snapshots during upgrade testing only           -->
+      <!-- see property imageio-ext.version                                                -->
+      <id>geosolutions</id>
+      <name>GeoSolutions libraries repository</name>
+      <url>https://maven.geo-solutions.it/</url>
+    </repository>
   </repositories>
 
   <build>
-
-    <extensions>
-      <extension>
-        <groupId>org.apache.maven.wagon</groupId>
-        <artifactId>wagon-webdav</artifactId>
-        <version>1.0-beta-2</version>
-      </extension>
-    </extensions>
 
     <pluginManagement>
       <plugins>
@@ -489,7 +527,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.0-beta-3</version>
+        <version>1.4</version>
         <executions>
           <execution>
             <phase>validate</phase>
@@ -538,12 +576,11 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
+        <version>3.10.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>11</source>
+          <target>11</target>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
@@ -565,19 +602,21 @@
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.22.1</version>
         <configuration>
-          <forkMode>pertest</forkMode>
-          <argLine>${maven.test.jvmargs} -XX:+IgnoreUnrecognizedVMOptions --illegal-access=warn</argLine>
-          <argLine>-Djava.awt.headless=true</argLine>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+          <systemPropertyVariables>
+            <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
+            <java.awt.headless>true</java.awt.headless>
+          </systemPropertyVariables>
+          <argLine>${maven.test.jvmargs} -XX:+IgnoreUnrecognizedVMOptions --illegal-access=warn --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED</argLine>
           <!-- prevent ForkedBooter focus steal on macOS -->
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>2.19.1</version>
         <executions>
@@ -598,7 +637,7 @@
       <plugin>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
-        <version>2.0.4</version>
+        <version>2.2.5</version>
         <executions>
           <execution>
             <goals>
@@ -625,27 +664,34 @@
             <descriptor>release/war.xml</descriptor>
             <descriptor>release/doc.xml</descriptor>
           </descriptors>
-          <finalName>geowebcache-1.20-SNAPSHOT</finalName>
+          <finalName>geowebcache-1.24-SNAPSHOT</finalName>
           <outputDirectory>${project.build.directory}/release</outputDirectory>
         </configuration>
       </plugin>
 
       <plugin>
-        <groupId>com.coveo</groupId>
-        <artifactId>fmt-maven-plugin</artifactId>
-        <version>2.4.0</version>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.20.0</version>
         <executions>
           <execution>
+            <phase>validate</phase>
             <goals>
-              <goal>${fmt.action}</goal>
+              <goal>${spotless.action}</goal>
             </goals>
           </execution>
         </executions>
         <configuration>
-          <verbose>false</verbose>
-          <filesNamePattern>.*\.java</filesNamePattern>
-          <skip>${fmt.skip}</skip>
-          <style>aosp</style>
+          <java>
+            <googleJavaFormat>
+              <version>1.7</version>
+              <style>AOSP</style>
+            </googleJavaFormat>
+          </java>
+          <upToDateChecking>
+            <enabled>true</enabled>
+            <indexFile>${project.basedir}/.spotless-index</indexFile>
+          </upToDateChecking>
         </configuration>
       </plugin>
 
@@ -707,7 +753,7 @@
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
-          <source>1.8</source>
+          <source>11</source>
           <version>false</version>
           <noqualifier>all</noqualifier>
           <maxmemory>256M</maxmemory>
@@ -750,9 +796,8 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-pmd-plugin</artifactId>
-            <version>3.14.0</version>
+            <version>3.20.0</version>
             <executions>
               <execution>
                 <goals>
@@ -783,6 +828,7 @@
               </dependency>
             </dependencies>
             <configuration>
+              <linkXRef>false</linkXRef>
               <rulesets>
                 <ruleset>${geowebcacheBaseDir}/pmd-ruleset.xml</ruleset>
                 <ruleset>${geowebcacheBaseDir}/pmd-junit-ruleset.xml</ruleset>
@@ -801,11 +847,9 @@
       </build>
     </profile>
 
-    <!-- for those using JDK 11 -->
     <profile>
       <id>errorprone</id>
       <activation>
-        <jdk>(1.8,)</jdk>
         <property>
           <name>qa</name>
         </property>
@@ -813,7 +857,6 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.0</version>
             <configuration>
@@ -821,43 +864,6 @@
               <compilerArgs>
                 <arg>-XDcompilePolicy=simple</arg>
                 <arg>-Xplugin:ErrorProne -XepExcludedPaths:${project.build.directory}/generated-sources/.* ${errorProneFlags}</arg>
-                <arg>-Xlint:${lint}</arg>
-                <arg>-Werror</arg>
-              </compilerArgs>
-              <annotationProcessorPaths>
-                <path>
-                  <groupId>com.google.errorprone</groupId>
-                  <artifactId>error_prone_core</artifactId>
-                  <version>${errorProne.version}</version>
-                </path>
-              </annotationProcessorPaths>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <!-- using github.com/google/error-prone-javac is required when running on JDK 8 -->
-    <profile>
-      <id>errorprone8</id>
-      <activation>
-        <jdk>1.8</jdk>
-        <property>
-          <name>qa</name>
-        </property>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.0</version>
-            <configuration>
-              <fork>true</fork>
-              <compilerArgs combine.children="append">
-                <arg>-XDcompilePolicy=simple</arg>
-                <arg>-Xplugin:ErrorProne -XepExcludedPaths:${project.build.directory}/generated-sources/.* ${errorProneFlags}</arg>
-                <arg>-J-Xbootclasspath/p:${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</arg>
                 <arg>-Xlint:${lint}</arg>
                 <arg>-Werror</arg>
               </compilerArgs>
@@ -886,7 +892,7 @@
           <plugin>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-maven-plugin</artifactId>
-            <version>3.1.10</version>
+            <version>4.7.3.4</version>
             <executions>
               <execution>
                 <goals>
@@ -895,12 +901,12 @@
               </execution>
             </executions>
             <configuration>
+              <fork>false</fork>
               <effort>More</effort>
               <!--threshold>High</threshold-->
               <xmlOutput>true</xmlOutput>
               <maxRank>15</maxRank>
               <excludeFilterFile>${geowebcacheBaseDir}/spotbugs-exclude.xml</excludeFilterFile>
-              <jvmArgs>-XX:+TieredCompilation -XX:TieredStopAtLevel=1</jvmArgs>
             </configuration>
           </plugin>
         </plugins>
@@ -917,7 +923,6 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
             <version>3.1.1</version>
             <executions>
